# Project

./: .gitignore  LICENSE  NOTICE.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: scanner_config.student.yaml  scanner_config.yaml
src/examples/: scan_example.py
src/web_scanner/: crawler.py  main.py  types.py
src/web_scanner/config/: scanner_config.py
src/web_scanner/core/: auth.py  proxy_manager.py  rate_limiter.py
src/web_scanner/reporting/: __init__.py  pdf_generator.py  report_generator.py  template_manager.py
src/web_scanner/reporting/templates/: technical_details.html
src/web_scanner/scanner/: __init__.py  advanced_vulnerabilities.py  service_detector.py  vulnerability_scanner.py  web_fingerprint.py
src/web_scanner/scanner/modules/: __init__.py  brute_force.py  exploit_executor.py  reconnaissance.py
tests/: integration_test.py  test_report_findings_processing.py  test_vulnerability_scanner_findings_processing.py
web-scanner-main/: Codebase Audit and Upcomming Plans.md  requirements.txt  setup.py
web-scanner-main/src/web_scanner/config/: scanner_config.py  types.py
web-scanner-main/src/web_scanner/core/: __init__.py
web-scanner-main/src/web_scanner/reporting/: report_generator.py
web-scanner-main/src/web_scanner/reporting/templates/: technical_details.html
web-scanner-main/src/web_scanner/scanner/: __init__.py  crawler.py  network_scanner.py  subdomain_enum.py  vulnerability_scanner.py
web-scanner-main/src/web_scanner/ui/: app.py
web-scanner-main/src/web_scanner/ui/templates/: index.html
web-scanner-main/tests/: test_config.yaml
web-scanner-main/tests/unit/: __init__.py  test_scanner.py  test_server.py
