[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-scanner"
version = "1.0"
description = "Web Application Security Scanner — Final Year Project"
authors = [
    { name = "Omar Eladawi" }
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.9.3",
    "PyYAML>=5.4.1",
    "aiohttp>=3.8.1",
    "jinja2>=3.0.1",
    "colorlog>=6.0.0",
    "validators>=0.20.0",
    "reportlab>=3.6.8",
    "typing-extensions>=4.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
# Required only for the advanced brute-force and exploit modules (lab use only)
advanced = [
    "paramiko>=2.8.1",
    "python-nmap>=0.7.1",
    "scapy>=2.5.0",
    "PyJWT>=2.6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.19.0",
]
ui = ["flask>=2.0.0"]

[project.scripts]
webscan = "web_scanner.main:run_scanner"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["web_scanner"]

[tool.setuptools.package-data]
web_scanner = [
    "reporting/templates/*.html",
    "config/*.yaml"
]
